[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/entity/player/anim_playercrouch.tres" type="Animation" id=1]
[ext_resource path="res://scripts/entity/player.gd" type="Script" id=2]
[ext_resource path="res://scripts/entity/camera.gd" type="Script" id=3]
[ext_resource path="res://assets/images/croshair.png" type="Texture2D" id=4]
[ext_resource path="res://scenes/entity/player/player_capsuleshape.tres" type="Shape3D" id=5]
[ext_resource path="res://assets/audio/collision_effects/166506__yoyodaman234__concrete-footstep-4.wav" type="AudioStream" id=6]

[node name="player" type="CharacterBody3D"]
input_ray_pickable = false
script = ExtResource( 2 )
camera_position = [ Transform3D( -1, 0, 0, 0, 1, 0, 0, 0, -1, 0, 0, 0 ), Transform3D( -1, 0, 0, 0, 1, 0, 0, 0, -1, 0, 0, -1.5 ) ]

[node name="PlayerCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.9, 0 )
shape = ExtResource( 5 )

[node name="PlayerHead" type="Node3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.65, 0 )

[node name="PlayerCamera" type="Camera3D" parent="PlayerHead"]
transform = Transform3D( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )
current = true
script = ExtResource( 3 )

[node name="PlayerLight" type="SpotLight3D" parent="PlayerHead"]
transform = Transform3D( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )
visible = false
light_bake_mode = 0
shadow_enabled = true

[node name="PlayerRayCast" type="RayCast3D" parent="PlayerHead"]
visible = false
enabled = true
target_position = Vector3( 0, 0, 3 )
collide_with_areas = true

[node name="PlayerStepsAudio3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
unit_size = 3.0
bus = "FX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/crouch = ExtResource( 1 )

[node name="hud" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="croshair" type="TextureRect" parent="hud"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stats" type="VBoxContainer" parent="hud"]
anchor_top = 1.0
anchor_right = 0.2
anchor_bottom = 1.0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="ProgressBar" parent="hud/stats"]
offset_right = 170.0
offset_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="stamina" type="ProgressBar" parent="hud/stats"]
offset_top = 18.0
offset_right = 170.0
offset_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
